--- a/r/index.html
+++ b/r/index.html
@@ -110,7 +110,7 @@
             <li>熟练使用 vue,vue-router全家桶开发项目；</li>
             <li>熟练使用bootstrap,Vant等前端UI组件库，熟悉echarts图表组件；</li>
             <li>熟悉Webpack环境配置搭建及Vue-cli使用，熟悉git版本控制系统；</li>
-            <li>了解java、c语言，了解mysql、Oracle数据库基本操作；</li>
+            <li>了解java、c语言，了解mysql数据库基本操作；</li>
             <li>细心认真，有良好的沟通能力，具备团队协作精神；</li>
           </ol>
         </div>
