--- a/r/index.html
+++ b/r/index.html
@@ -255,6 +255,11 @@
           具有良好的沟通表达、团队协作能力，责任心强。<br />
         </div>
       </div>
+      <p class="pr" style="text-indent: 3rem">
+        博客地址：<a href="https://augustfeng.gitee.io"
+          >https://augustfeng.gitee.io</a
+        >
+      </p>
       <div class="footer">
         <a
           href="./%E5%86%AF%E6%8C%AF%E6%98%8C%E7%AE%80%E5%8E%86-%E5%89%8D%E7%AB%AF%E5%BC%80%E5%8F%91.pdf"
