--- a/r/index.html
+++ b/r/index.html
@@ -22,8 +22,8 @@
           .load(function () {
             var windowW = window.innerWidth
             var windowH = window.innerHeight
-            var realWidth = this.width
-            var realHeight = this.height
+            var realWidth = this.width * 10
+            var realHeight = this.height * 10
             var imgWidth, imgHeight
             var scale = 0.8
             if (realHeight > windowH * scale) {
