--- a/r/index.html
+++ b/r/index.html
@@ -170,8 +170,8 @@
         <div class="title">工作经历</div>
         <div class="content">
           <h3>
-            2019/10 --
-            2021/09&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;北京晟世康泰文化传播有限公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;前端开发
+            2020/02 --
+            2021/10&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;北京晟世康泰文化传播有限公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;前端开发
           </h3>
           <p><b>主要工作：</b></p>
           <ol>
@@ -183,7 +183,7 @@
           </ol>
           <h3>
             2017/08 --
-            2019/10&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;北京五木服装有限责任公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;网络管理员
+            2020/01&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;北京五木服装有限责任公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;网络管理员
           </h3>
           <p><b>主要工作：</b></p>
           <ol>
@@ -207,7 +207,7 @@
       <div class="bd">
         <div class="title">项目经历</div>
         <div class="content">
-          <h3>2019/10 -- 至今&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;育果医生</h3>
+          <h3>2020/02 -- 至今&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;育果医生</h3>
           <p class="pr">
             育果医生是中国领先的高端私立就诊折扣平台；是医疗健康领域唯一准确的医生排班信息平台；是一
             款集医疗机构、保险机构，向高端人群提供诊疗服务、健康管理为一体的医疗类应用
@@ -223,7 +223,7 @@
             <img src="./docinfo.jpg" alt="医生信息" class="imgpr" />
           </p>
           <h3>
-            2019/10 --
+            2020/02 --
             至今&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;育果医生后台管理系统
           </h3>
           <p class="pr">为育果医生提供后台管理支持</p>
@@ -234,15 +234,15 @@
             页面。
           </p>
           <h3>
-            2019/10 -- 2019/10&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;纽曼官网
+            2020/01 -- 2020/01&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;纽曼官网
           </h3>
           <p class="pr">兼职开发宣传页面</p>
           <p class="pr">
             纽曼电器官网页面，包括首页、关于我们、新闻页面、产品中心页面、联系我们页面。
           </p>
           <p class="pr">
-            demo 地址：<a href="https://fengzhenchang.github.io/Newman/"
-              >https://fengzhenchang.github.io/Newman/</a
+            demo 地址：<a href="https://augustf.top/Newman/"
+              >https://augustf.top/Newman/</a
             >
           </p>
         </div>
@@ -256,9 +256,7 @@
         </div>
       </div>
       <p class="pr" style="text-indent: 3rem">
-        博客地址：<a href="https://augustfeng.gitee.io"
-          >https://augustfeng.gitee.io</a
-        >
+        博客地址：<a href="https://augustf.top">https://augustf.top</a>
       </p>
       <div class="footer">
         <a
