--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 <body>
 
     <div class="c-header clearfix">
-        <a class="c-logo" href="https://augustfeng.gitee.io">Notebook</a>
+        <a class="c-logo" href="#">Notebook</a>
         <div class="c-nav">
             <ul class="clearfix">
-                <li class="on"><a href="https://augustfeng.gitee.io">Notebook</a></li>
+                <li class="on"><a href="#">Notebook</a></li>
             </ul>
         </div>
     </div>
@@ -55,7 +55,7 @@
                 <a href="https://weibo.com/u/5534229804" target="_blank"><img src="image/common/sina.png?" width="12px"
                         alt="augustfeng'weibo" title="Weibo"></a>
             </p>
-            <span class="u-copyright">&#xA9;2021 <a href="">augustfeng.gitee.io</a></span>
+            <span class="u-copyright">&#xA9;2021 <a href="#">augustf.top</a></span>
         </div>
         <i class="u-folder" id="c-sidebar-folder"></i>
     </div>
