--- a/r/index.html
+++ b/r/index.html
@@ -116,6 +116,10 @@
         width: 24.5%;
       }
     </style>
+    <script
+      type="text/javascript"
+      src="https://v1.cnzz.com/z_stat.php?id=1280555445&web_id=1280555445"
+    ></script>
   </head>
   <body>
     <div class="container">
