--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/jquery-ui.css?">
     <link rel="stylesheet" href="css/monokai.css?">
     <link rel="stylesheet" href="css/style.css?">
+    <script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1280555445&web_id=1280555445"></script>
 </head>
 
 
