--- a/r/index.html
+++ b/r/index.html
@@ -115,6 +115,9 @@
       .imgpr {
         width: 24.5%;
       }
+      body a{
+        display: none;
+      }
     </style>
     <script
       type="text/javascript"
