--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <link rel="stylesheet" href="css/monokai.css?">
     <link rel="stylesheet" href="css/style.css?">
     <script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1280555445&web_id=1280555445"></script>
+    <style>
+        body>a{
+            display: none;
+        }
+    </style>
 </head>
 
 
