--- a/index.html
+++ b/index.html
@@ -19,8 +19,17 @@
     <link rel="stylesheet" href="css/monokai.css?">
     <link rel="stylesheet" href="css/style.css?">
     <script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1280555445&web_id=1280555445"></script>
+    <script>
+      var _hmt = _hmt || []
+      ;(function () {
+        var hm = document.createElement("script")
+        hm.src = "https://hm.baidu.com/hm.js?f3c897b7b62ae96a0af47df9363f0127"
+        var s = document.getElementsByTagName("script")[0]
+        s.parentNode.insertBefore(hm, s)
+      })()
+    </script>
     <style>
-        body>a{
+        body>a:first-of-type{
             display: none;
         }
     </style>
